WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94189
[chromium] Spellchecker should not change selection when right-clicking the selection
https://bugs.webkit.org/show_bug.cgi?id=94189
Summary
[chromium] Spellchecker should not change selection when right-clicking the s...
Hironori Bono
Reported
2012-08-15 23:02:02 PDT
(Copied from <
http://webkit.org/b/id=89331#c12
>)
Comment #12
From Yair Yogev 2012-08-15 17:22:30 PST (-) [reply] This fix is the cause of a very weird regression in Windows (only tested windows): let's say i'm posting a comment IGNORETHISWORD in WebKit Bugzilla, just like i am right now . All my words are spelled correctly except for one, that capital letters gibberish in the second line. Now i would like to copy my comment before submitting, so i: 1. Press Ctrl+A 2. right click the selection (anywhere) The selection will now change: The part of the text before the gibberish word will be deselected and if the last text block is longer than the horizontal position of the gibberish word, then any text in that block after that position will also be deselected.
Attachments
A quick fix
(2.36 KB, patch)
2012-08-15 23:13 PDT
,
Hironori Bono
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hironori Bono
Comment 1
2012-08-15 23:13:51 PDT
Created
attachment 158716
[details]
A quick fix Greetings, I have written a quick fix for this issue. Would it be possible to review it? Regards, Hironori Bono
Hajime Morrita
Comment 2
2012-08-16 00:14:38 PDT
Comment on
attachment 158716
[details]
A quick fix Makes sense,thank you for the quick fix.
WebKit Review Bot
Comment 3
2012-08-16 01:08:07 PDT
Comment on
attachment 158716
[details]
A quick fix Clearing flags on attachment: 158716 Committed
r125757
: <
http://trac.webkit.org/changeset/125757
>
WebKit Review Bot
Comment 4
2012-08-16 01:08:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug